--- a/etmk/EjemploRMarkdown.Rmd
+++ b/etmk/EjemploRMarkdown.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "EjemploRMarkdown"
 author: "Ezequiel Muñoz"
-date: "9/3/2020"
+date: "`r format(Sys.time(), '%d %B, %Y. %H:%M')`"
 output: 
   pdf_document: 
     keep_tex: yes
