--- a/etmk/EjemploRMarkdown.tex
+++ b/etmk/EjemploRMarkdown.tex
@@ -106,7 +106,7 @@
 
 \title{EjemploRMarkdown}
 \author{Ezequiel Muñoz}
-\date{9/3/2020}
+\date{28 mayo, 2020. 20:22}
 
 \begin{document}
 \maketitle
