--- a/etmk/EjemploRMarkdown.Rmd
+++ b/etmk/EjemploRMarkdown.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "EjemploRMarkdown"
-author: "Ezequiel Muñoz"
+author: "Ezequiel T. Muñoz K."
 date: "`r format(Sys.time(), '%d %B, %Y. %H:%M')`"
 output: 
   pdf_document: 
